--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "token": "ILAGAY_MO_BOT_TOKEN_DITO",
-  "raidChannelId": "ILAGAY_MO_CHANNEL_ID_DITO",
+  "token": "",
+  "raidChannelId": "1459967642621448316",
   "startRaid": "Subway"
 }
