--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "discord-raid-bot",
   "version": "1.0.0",
-  "description": "Discord bot for automatic raid updates every 15 minutes based on Philippine time",
+  "description": "Discord bot for automated raid posts and reminders",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
-  "author": "YourName",
-  "license": "MIT",
   "dependencies": {
-    "discord.js": "^14.16.0",
-    "dotenv": "^16.3.1"
+    "discord.js": "^14.16.0"
+  },
+  "engines": {
+    "node": ">=18"
   }
 }
