Update package.json dependencies and remove description
Removed the description field and updated discord.js version. Added dotenv as a dependency.

--- a/package.json
+++ b/package.json
@@ -1,15 +1,12 @@
 {
   "name": "discord-raid-bot",
   "version": "1.0.0",
-  "description": "Discord bot for automated raid posts and reminders",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
-    "discord.js": "^14.16.0"
-  },
-  "engines": {
-    "node": ">=18"
+    "discord.js": "^14.11.0",
+    "dotenv": "^16.3.1"
   }
 }
