--- a/package.json
+++ b/package.json
@@ -1,12 +1,17 @@
 {
-  "name": "discord-raid-bot",
+  "name": "portal-bot",
   "version": "1.0.0",
+  "description": "Discord bot for PORTAL UPDATE",
   "main": "index.js",
+  "type": "commonjs",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
-    "discord.js": "^14.11.0",
-    "dotenv": "^16.3.1"
+    "discord.js": "^14.14.0",
+    "express": "^4.18.2"
+  },
+  "engines": {
+    "node": ">=18"
   }
 }
