--- a/package.json
+++ b/package.json
@@ -1,17 +1,16 @@
 {
-  "name": "portal-bot",
+  "name": "raid-portal-bot",
   "version": "1.0.0",
-  "description": "Discord bot for PORTAL UPDATE",
+  "description": "Cinematic dungeon portal system bot",
   "main": "index.js",
-  "type": "commonjs",
   "scripts": {
     "start": "node index.js"
   },
-  "dependencies": {
-    "discord.js": "^14.14.0",
-    "express": "^4.18.2"
-  },
   "engines": {
     "node": ">=18"
+  },
+  "dependencies": {
+    "discord.js": "^14.14.1",
+    "express": "^4.18.2"
   }
 }
